--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.18",
     "next": "15.5.2",
     "react": "19.1.0",
